2011-04-15  Andrea Bocci
	* tag V01-05-40
	* Fixes in (Smart)Rendering, simplified start script

2011-04-13  Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-37
	* Import all Sequences. (Bug/feature 76150).
	* Import all Paths modifications. 

2011-04-12  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-36
	* Even more cleanup in subtable creation

2011-04-12  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-35
	* Better cleanup in subtable creation

2011-04-10  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-33/34
	* Add "replace-module-by-another-module-in-menu-globally" feature
	* Small fixes here and there

2011-04-09  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-32
	* Add missing file
	
2011-04-08  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-31
	* Adding Smart Renaming of modules/sequences/paths (replacement of substrings old => new)

2011-04-08  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-30
	* Adding Smart Reversioning of paths based on diff

2011-04-07  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-29
	* Improved color coding for EventContent

2011-04-04  Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-28
	* Import All paths menu.
	* Remove configuration feature (command line). Bug#79748.

2011-04-04  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-27
	* More work in progress on py import: jython jar

2011-04-03  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-26
	* Work in progress on py import

2011-04-02  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-25
	* Make Diff report more concise

2011-04-02  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-24
	* Migrate/Diff no longer ignore/forget Reference status NEGATE/IGNORE/DEFAULT
	
2011-03-31  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-23
	* improved labellig of radio buttons in "search" popup